Fix cursor not showing up (#9)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,5 +14,4 @@ a {
 * {
   box-sizing: border-box;
   margin: 0;
-  overflow: hidden;
 }
